--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,69 @@
 {
     "cSpell.words": [
-        "Bannar"
+        "ameen",
+        "Ameen",
+        "atta",
+        "Bakar",
+        "Bannar",
+        "Boondi",
+        "canilla",
+        "Canilla",
+        "Chatkharaydaar",
+        "Chatkharaydar",
+        "chinigura",
+        "Chinigura",
+        "Choco",
+        "cinamon",
+        "dalda",
+        "Deshi",
+        "dinajpuri",
+        "Dinajpuri",
+        "hoque",
+        "Hoque",
+        "jamuna",
+        "Jamuna",
+        "jazaa",
+        "Jazaa",
+        "jepg",
+        "kalijeera",
+        "Kalijeera",
+        "kalijira",
+        "Kalijira",
+        "Kalizira",
+        "Khanni",
+        "khataee",
+        "Khataee",
+        "khatai",
+        "Khatai",
+        "krishok",
+        "Krishok",
+        "laxmi",
+        "Laxmi",
+        "Laziz",
+        "mapkit",
+        "masala",
+        "Masala",
+        "moja",
+        "Mustakshif",
+        "Nimko",
+        "ovijat",
+        "Ovijat",
+        "Qeitq",
+        "rehmat",
+        "Rehmat",
+        "ritesh",
+        "Ritesh",
+        "Sabzi",
+        "sanpatong",
+        "Sanpatong",
+        "Shahzada",
+        "SHANCUMINPOWDER",
+        "shereem",
+        "shereen",
+        "Shereen",
+        "suji",
+        "swad",
+        "Swad",
+        "TELAPIA"
     ]
 }
