--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,5 +65,47 @@
         "swad",
         "Swad",
         "TELAPIA"
+    ],
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "CDS",
+            "database": "IndexDB",
+            "username": "Mohim"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "database": "IndexDB",
+            "username": "Mohim",
+            "name": "CDS-intern"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "CDS__Intern",
+            "database": "CDS",
+            "username": "root",
+            "password": ""
+        }
     ]
 }
